Add support for atomic call (#66)
* Prepare model for atomic call response

* Add simplified atomic call support